Fixed nav-collapse menu dropdown border isues
removed border from navbar-collapse items

--- a/assets/css/bootstrap-responsive.css
+++ b/assets/css/bootstrap-responsive.css
@@ -676,6 +676,17 @@
   .nav-collapse .nav > li > a:hover {
     border: none;
   }
+  .nav-collapse .nav > li > a:focus {
+    border: none;
+  }
+  .nav-collapse .nav > .active > a,
+  .nav-collapse .nav > .active > a:hover,
+  .nav-collapse .nav > .active > a:focus {
+    border: none;
+  }
+  .nav-collapse .nav > li > a {
+    border: none;
+  }
   .navbar-inverse .btn-navbar {
     background: #960062;
   }
