--- a/assets/css/less/responsive-navbar.less
+++ b/assets/css/less/responsive-navbar.less
@@ -58,6 +58,21 @@
 	border: none;
   }
   
+  .nav-collapse .nav > li > a:focus {
+	border: none;
+  }
+  
+  .nav-collapse .nav > .active > a,
+  .nav-collapse .nav > .active > a:hover,
+  .nav-collapse .nav > .active > a:focus {
+  	border: none;
+  	}
+  	
+  
+  .nav-collapse .nav > li > a {
+	border: none;
+  }
+  
   .navbar-inverse .btn-navbar {
   	background: #960062;
   }		
